--- a/lapp/templates/casillero_detail.html
+++ b/lapp/templates/casillero_detail.html
@@ -1,48 +1,79 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Detalle del Casillero</title>
-</head>
-<body>
-    <h1>Detalle del Casillero</h1>
-    <p>ID: {{ casillero.id }}</p>
-    <p>Usuario: {{ casillero.usuario.name }}</p>
-    <p>Email: {{ casillero.usuario.email }}</p>
-    <p>Contraseña: {{ casillero.password }}</p>
+{% extends 'base.html' %}
 
-    <h2>Cambiar Contraseña</h2>
-    <form method="POST">
-        {% csrf_token %}
-        
-        <!-- Solo mostrar el campo de la nueva contraseña sin los errores repetidos -->
-        <label for="{{ form.password.id_for_label }}">Contraseña</label>
-        {{ form.password }}
+{% block title %}Locker Show{% endblock %}
 
-        {% if form.password.errors %}
-            <ul>
-                {% for error in form.password.errors %}
-                    <li style="color: red;">{{ error }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-        
-        <button type="submit" name="cambiar_contraseña">Cambiar Contraseña</button>
-    </form>
+{% block content %}
 
-    <h2>Cambiar Usuario</h2>
-    <form method="POST">
-        {% csrf_token %}
-        <label for="nuevo_usuario_id">Nuevo Usuario:</label>
-        <select name="nuevo_usuario_id" id="nuevo_usuario_id">
-            {% for usuario in usuarios %}
-                <option value="{{ usuario.id }}">{{ usuario.name }}</option>
-            {% endfor %}
-        </select>
-        <button type="submit" name="cambiar_usuario">Cambiar Usuario</button>
-    </form>
+<div class="container mt-5">
+
+    <h1 class="text-center mb-4"> Locker {{ casillero.id }} Details </h1>
+
+    <div class="card">
+        <div class="card-body text-center">
+            <i class="bi bi-person-circle" style="font-size: 60px;"></i>
+            <p><strong>Locker ID:</strong> {{ casillero.id }}</p>
+            <p><strong>User:</strong> {{ casillero.usuario.name }}</p>
+            <p><strong>Email:</strong> {{ casillero.usuario.email }}</p>
+        </div>
+    </div>
+
+    <p class="d-inline-flex gap-1">
+        <h2 class="text-center mt-4 btn btn-outline-dark" data-bs-toggle="collapse" href="#collapseChangeUser" role="button" aria-expanded="false" aria-controls="collapseChangeUser">
+            Change User <i class="bi bi-person-add"></i>
+        </h2>          
+    </p>
+
+    <div class="collapse" id="collapseChangeUser">
+        <div class="card card-body">
+            <form method="POST">
+                {% csrf_token %}
+                <div class="mb-3">
+                    <label for="nuevo_usuario_id" class="form-label"> <strong>New User:</strong></label>
+                    <select name="nuevo_usuario_id" id="nuevo_usuario_id" class="form-select">
+                        {% for usuario in usuarios %}
+                            <option value="{{ usuario.id }}">{{ usuario.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <button type="submit" name="cambiar_usuario" class="btn btn-dark">Change User</button>
+            </form>
+        </div>
+    </div>
+
+    <p class="d-inline-flex gap-1">
+        <h2 class="text-center mt-4 btn btn-outline-dark" data-bs-toggle="collapse" href="#collapseChangePassword" role="button" aria-expanded="false" aria-controls="collapseChangePassword">
+            Change Password <i class="bi bi-key"></i>
+        </h2>        
+    </p>
+
+    <div class="collapse" id="collapseChangePassword">
+        <div class="card card-body">
+            <form method="POST">
+                <p><strong>Current Password:</strong> {{ casillero.password }}</p>
+                {% csrf_token %}
+                <div class="mb-3">
+                    <label for="{{ form.password.id_for_label }}" class="form-label"> <strong>New Password</strong></label>
+                    {{ form.password }}
+                    {% if form.password.errors %}
+                        <ul class="text-danger mt-2">
+                            {% for error in form.password.errors %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                </div>
+                <button type="submit" name="cambiar_contraseña" class="btn btn-dark">Change Password</button>
+            </form>
+        </div>
+    </div>
 
     <br>
-    <a href="{% url 'casilleros_list' %}">Volver a la lista de casilleros</a>
-</body>
-</html>
+    <div class="text-center">
+        <a href="{% url 'casilleros_list' %}" class="btn btn-dark mt-3"> <i class="bi bi-arrow-left"></i> Lockers </a>
+    </div>
+    </div>
+
+{% endblock %}
+
+
+
