--- a/lapp/templates/casilleros_list.html
+++ b/lapp/templates/casilleros_list.html
@@ -1,25 +1,43 @@
-<h1>Lista de Casilleros</h1>
-<table>
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Usuario</th>
-            <th>Email</th>
-            <th>Contraseña</th>
-            <th>Acción</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for casillero in casilleros %}
-            <tr>
-                <td>{{ casillero.id }}</td>
-                <td>{{ casillero.usuario.name }}</td>
-                <td>{{ casillero.usuario.email }}</td>
-                <td>{{ casillero.password }}</td>
-                <td>
-                    <a href="{% url 'locker_detail' casillero.id %}">Ver</a>
-                </td>
-            </tr>
-        {% endfor %}
-    </tbody>
-</table>
+{% extends 'base.html' %}
+
+{% block title %}Lockers Index{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Active Lockers <i class="bi bi-shield-lock-fill"></i> </h1>
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead class="table-dark">
+                <tr>
+                    <th>ID</th>
+                    <th>User</th>
+                    <th>Email</th>
+                    <th>Password</th>
+                    <th>More</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for casillero in casilleros %}
+                    <tr>
+                        <td>{{ casillero.id }}</td>
+                        <td>{{ casillero.usuario.name }}</td>
+                        <td>{{ casillero.usuario.email }}</td>
+                        <td>{{ casillero.password }}</td>
+                        <td>
+                            <div class="dropdown">
+                                <button class="btn btn-dark" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-three-dots"></i>
+                                </button>
+                                <ul class="dropdown-menu">
+                                  <li><a href="{% url 'locker_detail' casillero.id %}" class="dropdown-item"> Show </a></li>
+                                </ul>
+                              </div>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+
+{% endblock %}
