--- a/lapp/templates/usuario_form.html
+++ b/lapp/templates/usuario_form.html
@@ -1,14 +1,41 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Formulario de Usuario</title>
-</head>
-<body>
-    <h1>{{ form.instance.pk|yesno:"Editar Usuario,Crear Usuario" }}</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Guardar</button>
-    </form>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}User Forms{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+    <h1 class="text-center mb-4">
+        {{ form.instance.pk|yesno:"Edit User, Create User" }}
+    </h1>
+
+    <div class="card">
+        <div class="card-body">
+            <form method="post">
+                {% csrf_token %}
+                <div class="mb-3">
+                    {% for field in form %}
+                        <div class="mb-3">
+                            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+                            {{ field }}
+                            {% if field.errors %}
+                                <div class="text-danger mt-1">
+                                    {% for error in field.errors %}
+                                        {{ error }}
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
+                        </div>
+                    {% endfor %}
+                </div>
+                <button type="submit" class="btn btn-dark">Save</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="text-center">
+        <a href="{% url 'usuarios_list' %}" class="btn btn-dark mt-3">
+            <i class="bi bi-arrow-left"></i> Users List
+        </a>
+    </div>
+</div>
+{% endblock %}
