--- a/lapp/templates/usuarios_list.html
+++ b/lapp/templates/usuarios_list.html
@@ -1,15 +1,43 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Usuarios</title>
-</head>
-<body>
-    <h1>Lista de Usuarios</h1>
-    <ul>
-        {% for usuario in usuarios %}
-            <li>{{ usuario.name }} - {{ usuario.email }}</li>
-        {% endfor %}
-    </ul>
-    <a href="{% url 'usuario_create' %}">Crear nuevo usuario</a>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Users Index{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+    <h1 class="text-center mb-4"> Active Users <i class="bi bi-people-fill"></i> </h1>
+
+    <table class="table table-striped table-hover">
+        <thead class="table-dark">
+            <tr>
+                <th>User</th>
+                <th>Email</th>
+                <th>More</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for usuario in usuarios %}
+                <tr>
+                    <td>{{ usuario.name }}</td>
+                    <td>{{ usuario.email }}</td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="btn btn-dark" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-three-dots"></i>
+                            </button>
+                            <ul class="dropdown-menu">
+                              <li><a  href="{% url 'usuario_update' usuario.id %}" class="dropdown-item"> Edit </a></li>
+                            </ul>
+                          </div>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    <div class="text-center">
+        <a href="{% url 'usuario_create' %}" class="btn btn-dark mt-3">
+            <i class="bi bi-person-add fs-5"></i> New User
+        </a>
+    </div>
+</div>
+{% endblock %}
