--- a/lapp/templates/controllers.html
+++ b/lapp/templates/controllers.html
@@ -23,6 +23,9 @@
                             <button class="btn btn-dark" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="bi bi-three-dots"></i>
                             </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="{% url 'locker_per_controller' c.id %}" class="dropdown-item"> Show </a></li>
+                              </ul>
                         </div>
                     </td>
                 </tr>
