--- a/lapp/templates/controllers.html
+++ b/lapp/templates/controllers.html
@@ -12,6 +12,7 @@
             <tr>
                 <th>Name</th>
                 <th>Actions</th>
+                <th>Estado</th>
             </tr>
         </thead>
         <tbody>
@@ -28,6 +29,17 @@
                               </ul>
                         </div>
                     </td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="btn btn-dark" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="bi bi-three-dots"></i>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="{% url 'check_status' c.id %}" class="dropdown-item"> Check Status </a></li>
+                              </ul>
+                        </div>
+                    </td>
+
                 </tr>
             {% endfor %}
         </tbody>
