--- a/lapp/templates/base.html
+++ b/lapp/templates/base.html
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-3">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'controllers' %}">Lockers</a>
+                        <a class="nav-link" href="{% url 'controllers' %}">Controllers</a>
                     </li>
              <!--       <li class="nav-item">
                         <a class="nav-link" href="{% url 'usuarios_list' %}">Users</a>
