--- a/lapp/templates/casilleros_list.html
+++ b/lapp/templates/casilleros_list.html
@@ -4,7 +4,10 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h1 class="text-center mb-4">Active Lockers <i class="bi bi-shield-lock-fill"></i> </h1>
+    <h1 class="text-center mb-4">{% with casilleros|first as first_casillero %}
+            Controller {{ first_casillero.controller.id }} Active Lockers 
+        {% endwith %} 
+    <i class="bi bi-shield-lock-fill"></i> </h1>
     <div class="table-responsive">
         <table class="table table-striped table-hover">
             <thead class="table-dark">
@@ -23,6 +26,16 @@
                         <td>{{ casillero.usuario.name }}</td>
                         <td>{{ casillero.usuario.email }}</td>
                         <td>{{ casillero.password }}</td>
+                        <td>
+                            <div class="dropdown">
+                                <button class="btn btn-dark" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-three-dots"></i>
+                                </button>
+                                <ul class="dropdown-menu">
+                                  <li><a href="{% url 'locker_detail' casillero.id %}" class="dropdown-item"> Show </a></li>
+                                </ul>
+                              </div>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
