--- a/lapp/templates/controllers.html
+++ b/lapp/templates/controllers.html
@@ -12,7 +12,7 @@
             <tr>
                 <th>Name</th>
                 <th>Actions</th>
-                <th>Estado</th>
+                <th>Status</th>
             </tr>
         </thead>
         <tbody>
